styles/globals.scss
@import "./variables";

html,
body {
  padding: 0;
  margin: 0;
  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
  font-family: "Inter", sans-serif !important;
  scroll-behavior: smooth;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

// body::-webkit-scrollbar-track {
//   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
//   background-color: #fff;
// }

// body::-webkit-scrollbar {
//   width: 5px;
//   background-color: #fff;
//   border-radius: 5px;
// }

// body::-webkit-scrollbar-thumb {
//   background-color: #4959e7;
//   border: none;
//   border-radius: 5px;
// }

/* custom css chakra */

.chakra-button {
  height: 50px !important;
  min-width: 150px !important;
  border-radius: 10px !important;
  font-size: 16px !important;
  font-family: Inter !important;
  font-style: normal !important;
  font-weight: 600 !important;
  line-height: 150% !important;
  letter-spacing: 0.02em !important;
}

.dotsCustom {
  list-style: none;
  display: inline-flex !important;
  align-items: center;
  justify-content: center;

  li {
    background-color: $--gray-color-200;
    width: 8px;
    height: 8px;
    margin: 0 11px;
    border-radius: 50%;
    position: relative;
    z-index: 2;

    button {
      content: "";
      font-size: 0;
      line-height: 0;
      display: block;
      width: 8px;
      height: 8px;
      padding: 5px;
      cursor: pointer;
      color: transparent;
      border: 0;
      outline: none;
      background: transparent;
    }
  }

  li.slick-active {
    background-color: $--primary-color;
  }
}

.platformSlider {
  .slick-dots {
    bottom: -60px;
    li {
      width: 8px;
      height: 8px;
      margin: 0 12px;

      button {
        width: 8px;
        height: 8px;
        padding: 0;

        &::before {
          width: 8px;
          height: 8px;
          color: #e9e9f2;
          opacity: 1;
        }
      }
    }

    li.slick-active {
      button {
        &::before {
          color: #4959e7;
          opacity: 1;
        }
      }
    }
  }
}

@media (max-width: 768px) {
  .chakra-button {
    font-size: 14px !important;
    line-height: 21px !important;
    min-width: 122px !important;
    height: 45px !important;
  }

  .platformSlider {
    .slick-dots {
      bottom: -40px;
      li {
        width: 5px;
        height: 5px;
        margin: 0 9px;

        button {
          width: 5px;
          height: 5px;
          padding: 0;

          &::before {
            width: 5px;
            height: 5px;
            color: #e9e9f2;
            opacity: 1;
          }
        }
      }

      li.slick-active {
        button {
          &::before {
            color: #4959e7;
            opacity: 1;
          }
        }
      }
    }
  }
}

